rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q2932.1_1996_Embedded-DSS2Types.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q2932.1_1996_Embedded-DSS2Types.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod embedded_dss2_types {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, tag(application, 0))]
    pub struct DSS2InformationElement(pub OctetString);
}
