rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q2964.1_1996_Look-Ahead-Procedure.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q2964.1_1996_Look-Ahead-Procedure.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod look_ahead_procedure {
    extern crate alloc;
    use super::addressing_data_elements::Address;
    use super::embedded_dss2_types::DSS2InformationElement;
    use super::in_cs_1_errors::{SYSTEM_FAILURE, TASK_REFUSED};
    use super::look_ahead_parameters::CauseIndicators;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "LookAhead\t\tLookAhead\t\t::= localValue 501"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum LookResult {
        compatibleAndFree = 0,
        compatibleAndBusy = 1,
        incompatible = 2,
    }
}
