rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q2981_1999_Call-Control-Object-Super-Class.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q2981_1999_Call-Control-Object-Super-Class.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod call_control_object_super_class {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
