rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q2981_1999_Call-Object-Class-Definitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q2981_1999_Call-Object-Class-Definitions.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod call_object_class_definitions {
    extern crate alloc;
    use super::addressing_data_elements::{PartyNumber, PartySubaddress, PresentedAddressScreened};
    use super::call_control_object_super_class::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=3"))]
    pub struct BearerId(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct BearerIdList(pub SequenceOf<BearerId>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    #[non_exhaustive]
    pub enum CommunicationConfiguration {
        source = 0,
        sink = 1,
        biDirectional = 2,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=21"))]
    pub struct DefaultAddress(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=21"))]
    pub struct NetworkInternalAddress(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("-2147483648..=2147483647"))]
    pub struct ObjectReferenceId(pub i32);
    #[doc = " 4 octets"]
    #[doc = " refers to an object reference, unique to each object within a call"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ObjectReferenceIdList(pub SequenceOf<ObjectReferenceId>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct OpenCall(pub BitString);
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct PartyObjectArgumentPartyAddress {
        #[rasn(identifier = "presentedAddressScreened")]
        pub presented_address_screened: PresentedAddressScreened,
        #[rasn(identifier = "defaultAddress")]
        pub default_address: Option<DefaultAddress>,
        #[rasn(identifier = "networkInternalAddress")]
        pub network_internal_address: Option<NetworkInternalAddress>,
    }
    impl PartyObjectArgumentPartyAddress {
        pub fn new(
            presented_address_screened: PresentedAddressScreened,
            default_address: Option<DefaultAddress>,
            network_internal_address: Option<NetworkInternalAddress>,
        ) -> Self {
            Self {
                presented_address_screened,
                default_address,
                network_internal_address,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    #[non_exhaustive]
    pub enum PartyObjectArgumentPartyType {
        initiator = 0,
        receiver = 1,
        callOwner = 2,
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    #[non_exhaustive]
    pub enum PartyObjectArgumentPartyStatus {
        confirmed = 0,
        #[rasn(identifier = "virtual")]
        R_virtual = 1,
        alerting = 2,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct PartyObjectArgument {
        #[rasn(identifier = "partyAddress")]
        pub party_address: PartyObjectArgumentPartyAddress,
        #[rasn(identifier = "partyOwnerPEPId")]
        pub party_owner_pepid: ObjectReferenceId,
        #[rasn(identifier = "associatedResourcePEPIds")]
        pub associated_resource_pepids: Option<ObjectReferenceIdList>,
        #[rasn(identifier = "associatedPEPIds")]
        pub associated_pepids: Option<ObjectReferenceIdList>,
        #[rasn(identifier = "partyType")]
        pub party_type: PartyObjectArgumentPartyType,
        #[rasn(identifier = "partyStatus")]
        pub party_status: PartyObjectArgumentPartyStatus,
    }
    impl PartyObjectArgument {
        pub fn new(
            party_address: PartyObjectArgumentPartyAddress,
            party_owner_pepid: ObjectReferenceId,
            associated_resource_pepids: Option<ObjectReferenceIdList>,
            associated_pepids: Option<ObjectReferenceIdList>,
            party_type: PartyObjectArgumentPartyType,
            party_status: PartyObjectArgumentPartyStatus,
        ) -> Self {
            Self {
                party_address,
                party_owner_pepid,
                associated_resource_pepids,
                associated_pepids,
                party_type,
                party_status,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ServiceComponentCharacteristics(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ServiceQoSRequirements(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ServiceTrafficDescriptorRequirements(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    #[non_exhaustive]
    pub enum TelecomsServiceType {
        realtimeMultiMedia = 0,
        nonRealtimeMultiMedia = 1,
        unspecified = 2,
    }
    pub static CC_OBJECT_CLASSES: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&[0u32, 0u32], &***Q, &[2981u32, 6u32]].concat())
            .unwrap()
            .to_owned()
    });
}
